--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-validator": "^4.3.0",
     "mongoose": "^5.0.0-rc1",
     "passport": "^0.4.0",
+    "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
     "pug": "^2.0.0-rc.4"
   },
