--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Basic website with login and stuff",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon"
   },
   "author": "Cameron Braverman",
   "license": "ISC",
@@ -16,6 +17,7 @@
     "express-session": "^1.15.6",
     "express-validator": "^4.3.0",
     "mongoose": "^5.0.0-rc1",
+    "nodemon": "^1.14.7",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
