--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Basic website with login and stuff",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "nodemon"
   },
   "author": "Cameron Braverman",
@@ -16,6 +16,7 @@
     "express-messages": "^1.0.1",
     "express-session": "^1.15.6",
     "express-validator": "^4.3.0",
+    "mocha": "^4.1.0",
     "mongoose": "^5.0.0-rc1",
     "nodemon": "^1.14.7",
     "passport": "^0.4.0",
