--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,12 +26,22 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
-      - run: npm install npm start
+      - run: npm install -g mocha
 
       - save_cache:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-        
+
+     deployment:
+	master:
+		branch: master
+		commands:
+			- echo 'deploying'
+			- ssh cam@104.131.77.134 
+			- "cd ~/IDC; git pull"      
+
+
+  
       # run tests!
       - run: npm test
