added new test to yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,15 +33,19 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
-     deployment:
+     - run:
+	name: tests
+	command: npm test
+
+     - deploy:
 	master:
 		branch: master
 		commands:
 			- echo 'deploying'
 			- ssh cam@104.131.77.134 
-			- "cd ~/IDC; git pull"      
+			- "cd ~/IDC; git pull; npm install; pm2 start app"      
 
 
   
-      # run tests!
-      - run: npm test
+
+
