--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cloudinary": "^1.9.1",
     "connect-flash": "^0.1.1",
     "express": "^4.16.2",
     "express-messages": "^1.0.1",
@@ -18,6 +19,7 @@
     "express-validator": "^4.3.0",
     "mocha": "^4.1.0",
     "mongoose": "^5.0.0-rc1",
+    "multer": "^1.3.0",
     "nodemon": "^1.14.7",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
