--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-messages": "^1.0.1",
     "express-session": "^1.15.6",
     "express-validator": "^4.3.0",
+    "jquery": "^3.2.1",
     "mocha": "^4.1.0",
     "mongoose": "^5.0.0-rc1",
     "multer": "^1.3.0",
