--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.18.2",
     "cloudinary": "^1.9.1",
     "connect-flash": "^0.1.1",
+    "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
     "express-messages": "^1.0.1",
     "express-session": "^1.15.6",
